[gd_scene load_steps=12 format=2]

[ext_resource path="res://system/parts/entity/part_hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/entity.gd" type="Script" id=2]
[ext_resource path="res://entities/von/vonzitos.png" type="Texture" id=3]
[ext_resource path="res://system/components/movement/comp_movement_track_target.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/parts/entity/part_state_handler.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/state.gd" type="Script" id=6]
[ext_resource path="res://particles/entity/entity_big_death_particle.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/entity/enemy/enemy_hit.wav" type="AudioStream" id=8]
[ext_resource path="res://system/parts/part_sound_streamer.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 8.0

[node name="von" type="KinematicBody2D"]
script = ExtResource( 2 )
MAX_SPEED = 30
DeathParticle = ExtResource( 7 )
ID = "von"
DEFAULT_STATE = "MOVE"
STARTING_STATE = "MOVE"
state_execution_pattern = [ "MOVE" ]

[node name="texture" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 3 )

[node name="part_hurtbox" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, -9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_hurtbox"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="part_sound_streamer" parent="part_hurtbox" instance=ExtResource( 9 )]
stream = ExtResource( 8 )
bus = "entity_sounds"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="part_state_handler" parent="." instance=ExtResource( 5 )]

[node name="MOVE" type="Node2D" parent="part_state_handler"]
script = ExtResource( 6 )

[node name="comp_movement_track_target" parent="part_state_handler/MOVE" instance=ExtResource( 4 )]
target_node_group = "player"

[connection signal="hurt" from="." to="part_hurtbox/part_sound_streamer" method="play_sound"]
[connection signal="hit_detected" from="part_hurtbox" to="." method="_on_damage_received"]
[connection signal="ready" from="part_state_handler" to="part_state_handler" method="start_state_pattern"]
[connection signal="start_state_pattern_request" from="part_state_handler" to="." method="start_state_pattern"]
[connection signal="component_value_update" from="part_state_handler/MOVE/comp_movement_track_target" to="." method="set_movement_direction"]
